deployment-login.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: mobile-simulator-login-service
    labels:
      app: mobile-simulator-login
  spec:
    ports:
      - port: 8080
        name: http
    selector:
      app: mobile-simulator-login
      version: v2
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-simulator-login-deployment
  labels:
    app: mobile-simulator-login
    version: v2
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mobile-simulator
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: ykoyfman/mobile-simulator:example-bank-login-tracker
          imagePullPolicy: Always
          name: mobile-simulator-login
          ports:
            - containerPort: 8080
