bank-istio-destination-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loyalty-mobile-simulator-service
spec:
  host: loyalty-mobile-simulator-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loyalty-user-service
spec:
  host: loyalty-user-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loyalty-transaction-service
spec:
  host: loyalty-transaction-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: creditdb
spec:
  host: creditdb
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loyalty-database-load
spec:
  host: loyalty-database-load
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
