bank-istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simulator-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ibm-bank.com
    - secure.ibm-bank.com
    - credit-card.ibmdeveloper.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simulator
spec:
  hosts:
  - ibm-bank.com
  - secure.ibm-bank.com
  - credit-card.ibmdeveloper.net
  gateways:
  - simulator-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loyalty-mobile-simulator-service
        port:
          number: 8080
