deploy-ui-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mobile-simulator-service
spec:
  to:
    kind: Service
    name: mobile-simulator-service
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
