deployment.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: loyalty-mobile-simulator-service
    labels:
      app: loyalty-mobile-simulator
  spec:
    ports:
      - port: 80
        protocol: TCP
        targetPort: 8080
    type: LoadBalancer
    selector:
      app: loyalty-mobile-simulator
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loyalty-mobile-simulator-deployment
  labels:
    app: loyalty-mobile-simulator
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: loyalty-mobile-simulator
    spec:
      containers:
        - image: ykoyfman/simulator:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: loyalty-mobile-simulator
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Route
metadata:
  name: loyalty-mobile-simulator-service
spec:
  to:
    kind: Service
    name: loyalty-mobile-simulator-service
