simulator-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simulator-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simulator
spec:
  hosts:
  - "*"
  gateways:
  - simulator-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loyalty-mobile-simulator-service
        port:
          number: 8080
