tx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tx-vs
spec:
  hosts:
  - transaction-service
  http:
  - route:
    - destination:
        host: transaction-service
