user-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-vs
spec:
  hosts:
  - user-service
  http:
  - route:
    - destination:
        host: user-service
